Added an image + more code

--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <p>This will be our Tsa website</p>
-    <title>TSA Website</title>
+    <style>
+      body {
+        background-image: url(background\ image.jpg);
+        background-size: auto;
+ 
+        background-repeat: no-repeat;
+        font-family: Verdana, system-ui, -apple-system, BlinkMacSystemFont,
+          "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+          "Helvetica Neue", sans-serif;
+      }
+      h1 {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+      }
+    </style>
+    <h1 align="center">The Rosenberg/Richmond Community</h1>
+    <h3 align="center">This is our community that contains Richmond and Rosenberg</h3>
+      <p style="margin-top: 750px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sapiente facilis, totam laborum quisquam nulla nostrum debitis dignissimos. Eligendi error repellendus suscipit doloremque laudantium odit, ut labore obcaecati quo sapiente laboriosam modi commodi ea debitis rem quaerat atque nam voluptates perferendis dicta saepe nisi alias rerum sint! Cumque voluptates, reprehenderit quidem vero, mollitia amet quia quisquam maiores repellendus libero eius ducimus quo ullam quasi consequatur exercitationem, repudiandae placeat similique praesentium dolor aspernatur corrupti neque nesciunt blanditiis! Distinctio dolore sunt expedita accusamus veniam neque quae vitae amet, unde repudiandae harum, tempora possimus magni nulla dolor! Aut, perferendis iste pariatur error, excepturi animi harum doloremque natus nisi cupiditate repellat ullam facere ratione quae quis. Facilis eos ducimus eaque in quasi ipsa fuga, consectetur quibusdam facere voluptatem earum. Sunt doloribus at a voluptatibus, voluptas ducimus aliquam quibusdam repellendus fugit earum, amet eaque illo incidunt natus culpa error fugiat rerum quis. Cumque nesciunt placeat pariatur voluptas impedit iste unde amet alias esse ipsa, id et exercitationem neque quis? Unde quaerat incidunt adipisci maxime. Expedita aspernatur nobis nesciunt molestias repellendus! Sit magni deleniti repellendus quis. Libero deleniti explicabo laborum placeat ullam excepturi officia recusandae reiciendis, iste, similique expedita consequuntur molestias velit maxime commodi, obcaecati a.</p>
+      <title>The Rosenberg/Richmond Community</title>
+    </p>
   </head>
+
   <body></body>
 </html>
