--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <body style="background-color:rgb(126, 168, 248);"> 
+    </body>
     <style>
-      body {
-        background-image: url(background\ image.jpg);
-        background-size: auto;
- 
-        background-repeat: no-repeat;
-        font-family: Verdana, system-ui, -apple-system, BlinkMacSystemFont,
-          "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-          "Helvetica Neue", sans-serif;
-      }
-      h1 {
+      #img1 {
+  border-radius: 15px; /* one value */
+  background: #04AA6D;
+  width: 700px;
+  position: absolute;
+  top: 175px;
+  right: 100px;
+    }
+
+      h1, h3, p{
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
@@ -21,6 +23,8 @@
     </style>
     <h1 align="center">The Rosenberg/Richmond Community</h1>
     <h3 align="center">This is our community that contains Richmond and Rosenberg</h3>
+    <img id="img1" src="water tower photo.jpg",  alt="an image of Rosenberg">
+    <p style="margin-left: 500px; margin-top: 100px; width: 350px;"> <strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, eos quam voluptatibus natus alias laudantium nobis possimus ab ex vero inventore officiis nesciunt a debitis, distinctio facilis, magni iure blanditiis! Ullam soluta in placeat nobis. Tenetur, neque praesentium dolor illo veniam nesciunt quibusdam eveniet quod obcaecati voluptates maxime consequatur aut iste illum natus, quos quaerat sequi? Asperiores quidem nobis perferendis similique repellat quae voluptatibus dolores quia. Facere tenetur est perspiciatis, impedit nihil optio error maiores?</strong></p>
       <p style="margin-top: 750px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sapiente facilis, totam laborum quisquam nulla nostrum debitis dignissimos. Eligendi error repellendus suscipit doloremque laudantium odit, ut labore obcaecati quo sapiente laboriosam modi commodi ea debitis rem quaerat atque nam voluptates perferendis dicta saepe nisi alias rerum sint! Cumque voluptates, reprehenderit quidem vero, mollitia amet quia quisquam maiores repellendus libero eius ducimus quo ullam quasi consequatur exercitationem, repudiandae placeat similique praesentium dolor aspernatur corrupti neque nesciunt blanditiis! Distinctio dolore sunt expedita accusamus veniam neque quae vitae amet, unde repudiandae harum, tempora possimus magni nulla dolor! Aut, perferendis iste pariatur error, excepturi animi harum doloremque natus nisi cupiditate repellat ullam facere ratione quae quis. Facilis eos ducimus eaque in quasi ipsa fuga, consectetur quibusdam facere voluptatem earum. Sunt doloribus at a voluptatibus, voluptas ducimus aliquam quibusdam repellendus fugit earum, amet eaque illo incidunt natus culpa error fugiat rerum quis. Cumque nesciunt placeat pariatur voluptas impedit iste unde amet alias esse ipsa, id et exercitationem neque quis? Unde quaerat incidunt adipisci maxime. Expedita aspernatur nobis nesciunt molestias repellendus! Sit magni deleniti repellendus quis. Libero deleniti explicabo laborum placeat ullam excepturi officia recusandae reiciendis, iste, similique expedita consequuntur molestias velit maxime commodi, obcaecati a.</p>
       <title>The Rosenberg/Richmond Community</title>
     </p>
