--- a/timeline.html
+++ b/timeline.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timeline of Rosenberg and Richmond</title>
     <p>Our timeline will go here 😁</p>
+    <p><strong>Chicken Cheese</strong></p>
 </head>
 <body>
     
