--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Rosenberg/Richmond Community</title>
+    <title>The Rosenberg/Richmond Resource Hub</title>
     <style>
       body {
         background-color: rgb(126, 168, 248);
@@ -147,43 +147,39 @@
         <div class="dropdown-content" id="myDropdown">
           <a href="index.html">Home</a>
           <a href="timeline.html">Timeline</a>
-          <a href="map.html">Map of Rosenberg/Richmond</a>
+          <a href="map.html">Resource Map</a>
           <a href="interview.html">Interview with Locals</a>
         </div>
       </div>
     </nav>
   
-    <h1 align="center">The Rosenberg/Richmond Community</h1>
-    <h3 align="center">This is our community that contains Richmond and Rosenberg</h3>
+    <h1 align="center">The Rosenberg/Richmond Resource Hub</h1>
+    <h3 align="center">Your go to space for support, services, and community strength</h3>
     
     <div class="intro-text">
-      <strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, eos quam voluptatibus natus alias laudantium nobis possimus ab ex vero inventore officiis nesciunt a debitis, distinctio facilis, magni iure blanditiis! Ullam soluta in placeat nobis. Tenetur, neque praesentium dolor illo veniam nesciunt quibusdam eveniet quod obcaecati voluptates maxime consequatur aut iste illum natus, quos quaerat sequi? Asperiores quidem nobis perferendis similique repellat quae voluptatibus dolores quia. Facere tenetur est perspiciatis, impedit nihil optio error maiores?</strong>
+      <strong>Rosenberg/Richmond blends small-town warmth with modern Texas energy, offering a welcoming mix of historic charm, cultural vibrancy, and everyday convenience. Along the Brazos River, its walkable districts feature local shops, cafés, and preserved architecture, complemented by a lively food scene ranging from TexMex favorites to cozy wine bars. A strong community spirit shines through organizations like Rosenberg-Richmond Helping Hands, which bring neighbors together through events and volunteer efforts. With parks, green spaces, and easy access to nearby cities, the area offers peaceful suburban living, while a full calendar of festivals and family friendly gatherings keeps the community active. It is a place where history, hospitality, and growth come together with an inviting sense of possibility.</strong>
     </div>
     
     <div class="box-container">
       <div class="box">
-        <h2>Rosenberg</h2>
+        <h2>Fort Bend County Fairgrounds</h2>
         <p>
-          Rosenberg is a city located in Fort Bend County, Texas. It is part
-          of the Houston metropolitan area and has a rich history dating back
-          to the 19th century.
+          The Fairgounds are home to the annual Fort Bend County Fair and Rodeo. People from all over the community come to have a fun time.
         </p>
       </div>
 
       <div class="box">
-        <h2>Richmond</h2>
+        <h2>Seabourne Creek Nature Park</h2>
         <p>
-          Richmond is the county seat of Fort Bend County, Texas. It is
-          situated along the Brazos River and is known for its historic
-          downtown area and vibrant community events.
+          Seabourne Creek Nature Park can be found south of downtown Rosenberg and is open to the public. No matter who you come with, friends, family, or even solo, you are guaranteed to have a great time.
         </p>
       </div>
 
       <div class="box">
-        <h2>Community</h2>
+        <h2>The Local
+          TANKS Paintball Park</h2>
         <p>
-          Rosenberg and Richmond together form a connected community
-          focused on growth, history, and local culture.
+          TANKS Paintball Park is one of the main recreational spots in the Rosenberg-Richmond area. Many people come here to have a good time.
         </p>
       </div>
     </div>
