--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Rosenberg/Richmond Resource Hub</title>
+    <title>The Richmond/Rosenberg Resource Hub</title>
     <style>
       body {
         background-color: rgb(126, 168, 248);
@@ -197,7 +197,7 @@
 
   <body>
     <nav class="navbar">
-      <div class="nav-title">Rosenberg / Richmond</div>
+      <div class="nav-title">Richmond / Rosenberg</div>
       <div class="nav-links">
         <button class="dropdown-btn" onclick="toggleDropdown()">Menu ▼</button>
         <div class="dropdown-content" id="myDropdown">
@@ -209,14 +209,14 @@
       </div>
     </nav>
 
-    <h1 align="center">The Rosenberg/Richmond Resource Hub</h1>
+    <h1 align="center">The Richmond/Rosenberg Resource Hub</h1>
     <h3 align="center">
       Your go to space for support, services, and community strength
     </h3>
 
     <div class="intro-text">
       <strong
-        >Rosenberg/Richmond blends small-town warmth with modern Texas energy,
+        >The Richmond/Rosenberg area blends small-town warmth with modern Texas energy,
         offering a welcoming mix of historic charm, cultural vibrancy, and
         everyday convenience. Along the Brazos River, its walkable districts
         feature local shops, cafés, and preserved architecture, complemented by
@@ -253,7 +253,7 @@
         <h2>The Local TANKS Paintball Park</h2>
         <p>
           TANKS Paintball Park is one of the main recreational spots in the
-          Rosenberg-Richmond area. Many people come here to have a good time.
+          Richmond-Rosenberg area. Many people come here to have a good time.
         </p>
       </div>
     </div>
