--- a/map.html
+++ b/map.html
@@ -108,7 +108,7 @@
         <div class="dropdown-content" id="myDropdown">
           <a href="index.html">Home</a>
           <a href="timeline.html">Timeline</a>
-          <a href="map.html">Map of Rosenberg/Richmond</a>
+          <a href="map.html">Resource Map</a>
           <a href="interview.html">Interview with Locals</a>
         </div>
       </div>
