--- a/timeline.html
+++ b/timeline.html
@@ -2,11 +2,6 @@
     <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline of Rosenberg and Richmond</title>
-    <p>Our timeline will go here 😁</p>
-    <p><strong>Chicken Cheese</strong></p>
     <style>
       body {
         background-color: rgb(126, 168, 248);
@@ -102,7 +97,7 @@
         box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
       }
     </style>
-</head>
+    </head>
 <body>
     <nav class="navbar">
       <div class="nav-title">Rosenberg / Richmond</div>
@@ -111,7 +106,7 @@
         <div class="dropdown-content" id="myDropdown">
           <a href="index.html">Home</a>
           <a href="timeline.html">Timeline</a>
-          <a href="map.html">Map of Rosenberg/Richmond</a>
+          <a href="map.html">Resource Map</a>
           <a href="interview.html">Interview with Locals</a>
         </div>
       </div>
