--- a/map.html
+++ b/map.html
@@ -107,7 +107,7 @@
         <button class="dropdown-btn" onclick="toggleDropdown()">Menu ▼</button>
         <div class="dropdown-content" id="myDropdown">
           <a href="index.html">Home</a>
-          <a href="timeline.html">Timeline</a>
+          <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
           <a href="interview.html">Interview with Locals</a>
         </div>
