Interviews and QOL
interviews, qol changes on other pages

video was too big of a file so idk if itll show or what

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Richmond/Rosenberg Resource Hub</title>
     <style>
       body {
-        background-color: rgb(126, 168, 248);
+        background-color: rgb(236, 231, 221);
         margin: 0;
         padding: 0;
         position: relative;
@@ -103,7 +103,9 @@
           Roboto,
           Oxygen,
           Ubuntu,
-          Cantarell,
+          Cantarell
+          Montserrat,
+          Inter,
           "Open Sans",
           "Helvetica Neue",
           sans-serif;
