--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
     <title>Map of Richmond/Rosenberg</title>
     <style>
       body {
-        background-color: rgb(126, 168, 248);
+        background-color: rgb(236, 231, 221);
         margin: 0;
         padding: 0;
       }
@@ -102,7 +102,7 @@
 </head>
 <body>
     <nav class="navbar">
-      <div class="nav-title">Rosenberg / Richmond</div>
+      <div class="nav-title">Richmond / Rosenberg</div>
       <div class="nav-links">
         <button class="dropdown-btn" onclick="toggleDropdown()">Menu ▼</button>
         <div class="dropdown-content" id="myDropdown">
