--- a/timeline.html
+++ b/timeline.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rosenberg / Richmond - Timeline</title>
+    <title>Richmond / Rosenberg - Timeline</title>
     <style>
     body {
-      background-color: rgb(255, 255, 255);
+      background-color: rgb(236, 231, 221);
      margin: 0;
      padding: 0;
      position: relative;
@@ -134,7 +134,7 @@
 </head>
 <body>
     <nav class="navbar">
-      <div class="nav-title">Rosenberg / Richmond</div>
+      <div class="nav-title">Richmond / Rosenberg</div>
       <div class="nav-links">
         <button class="dropdown-btn" onclick="toggleDropdown()">Menu ▼</button>
         <div class="dropdown-content" id="myDropdown">
