--- a/interview.html
+++ b/interview.html
@@ -129,7 +129,7 @@
           <a href="index.html">Home</a>
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
-          <a href="interview.html">Interview with Locals</a>
+          <a href="interview.html">Community Interviews</a>
         </div>
       </div>
     </nav>
@@ -151,12 +151,16 @@
       };
     </script>
 
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-  }
+<div class="video-wrapper">
+  <iframe
+    src="https://drive.google.com/file/d/1pOyYs8vbGasbUanNBeQWlinZm8536TJn/preview"
+    allow="autoplay; fullscreen"
+    allowfullscreen
+    style="width: 90vw; height: 90vh; border: 0;">
+  </iframe>
+</div>
 
+<style>
   .video-wrapper {
     width: 100vw;
     height: 100vh;
@@ -164,16 +168,4 @@
     justify-content: center;
     align-items: center;
   }
-
-  .center-video {
-    width: 90vw;  
-    height: 90vh; 
-    object-fit: contain; 
-  }
 </style>
-
-<div class="video-wrapper">
-  <video class="center-video" controls>
-    <source src="Community Interviews.mp4" type="video/mp4">
-  </video>
-</div>
