--- a/map.html
+++ b/map.html
@@ -109,7 +109,7 @@
           <a href="index.html">Home</a>
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
-          <a href="interview.html">Interview with Locals</a>
+          <a href="interview.html">Community Interviews</a>
         </div>
       </div>
     </nav>
