--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
-        color: white;
+        color: rgb(0, 0, 0);
       }
 
       .navbar {
