--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         offering a welcoming mix of historic charm, cultural vibrancy, and
         everyday convenience. Along the Brazos River, its walkable districts
         feature local shops, cafés, and preserved architecture, complemented by
-        a lively food scene ranging from TexMex favorites to cozy wine bars. A
+        a lively food scene ranging from TexMex favorites to cozy restaurants. A
         strong community spirit shines through organizations like
         Rosenberg-Richmond Helping Hands, which bring neighbors together through
         events and volunteer efforts. With parks, green spaces, and easy access
