Documentation (Doesnt Work pls Fix)
I will try and fix later

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
           <a href="interview.html">Community Interviews</a>
+          <a href="Documentation.html">Documentation</a>
         </div>
       </div>
     </nav>
