Fixed documentation page
aka The Process

ignore regular documentation page, only use the .html

--- a/map.html
+++ b/map.html
@@ -110,6 +110,7 @@
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
           <a href="interview.html">Community Interviews</a>
+          <a href="documentation.html">The Process</a>
         </div>
       </div>
     </nav>
