--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
           <a href="interview.html">Community Interviews</a>
-          <a href="Documentation.html">Documentation</a>
+         <a href="documentation.html">The Process</a>
         </div>
       </div>
     </nav>
