--- a/timeline.html
+++ b/timeline.html
@@ -142,6 +142,7 @@
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
           <a href="interview.html">Community Interviews</a>
+          <a href="documentation.html">The Process</a>
         </div>
       </div>
     </nav>
