Form + Final Touches
Form Added
All pages changed to accommodate form
Subtitles added to interview
small color/text/QOL changes

--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Map of Richmond/Rosenberg</title>
+    <title>Richmond/Rosenberg - Map</title>
 
     <style>
       body {
@@ -14,6 +14,7 @@
 
       h1 {
         font-family: system-ui, sans-serif;
+        color: rgb(53, 46, 46);
       }
 
       .navbar {
@@ -79,7 +80,9 @@
           <a href="index.html">Home</a>
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
-          <a href="interview.html">Community Interviews</a>
+          <a href="interview.html">Interviews</a>
+          <a href="documentation.html">The Process</a>
+          <a href="form.html">Suggest</a>
         </div>
       </div>
     </nav>
