--- a/documentation.html
+++ b/documentation.html
@@ -109,8 +109,9 @@
           <a href="index.html">Home</a>
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
-          <a href="interview.html">Community Interviews</a>
+          <a href="interview.html">Interviews</a>
           <a href="documentation.html">The Process</a>
+          <a href="form.html">Suggest</a>
         </div>
       </div>
     </nav>
