--- a/timeline.html
+++ b/timeline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Richmond / Rosenberg - History</title>
+    <title>Richmond/Rosenberg - History</title>
     <style>
     body {
       background-color: rgb(236, 231, 221);
@@ -24,7 +24,7 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
-        color: white;
+        color: rgb(53, 46, 46);
       }
       
       .navbar {
@@ -141,8 +141,9 @@
           <a href="index.html">Home</a>
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
-          <a href="interview.html">Community Interviews</a>
+          <a href="interview.html">Interviews</a>
           <a href="documentation.html">The Process</a>
+          <a href="form.html">Suggest</a>
         </div>
       </div>
     </nav>
