Added maps + changed wording

--- a/documentation.html
+++ b/documentation.html
@@ -117,7 +117,7 @@
     </nav>
 
     <div class="map-container">
-      <h1>The Making of Our Resource Hub</h1>
+      <h1>The Creation of Our Resource Hub</h1>
       <iframe 
         src="https://websiteporfolio2026.carrd.co/"
         width="1200" 
