--- a/index.html
+++ b/index.html
@@ -220,18 +220,18 @@
 
     <div class="intro-text">
       <strong
-        >The Richmond/Rosenberg area blends small-town warmth with modern Texas energy,
-        offering a welcoming mix of historic charm, cultural vibrancy, and
+        >The Richmond/Rosenberg area includes small-town warmth and some Texas energy,
+        offering a strong historic charm, cultural vibrancy, and
         everyday convenience. Along the Brazos River, its walkable districts
         feature local shops, cafés, and preserved architecture, complemented by
-        a lively food scene ranging from TexMex favorites to cozy restaurants. A
-        strong community spirit shines through organizations like
-        Rosenberg-Richmond Helping Hands, which bring neighbors together through
+        tasty foods ranging from TexMex favorites to cozy restaurants. A
+        strong community spirit shines from organizations like
+        Rosenberg-Richmond Helping Hands, bringing neighbors together through
         events and volunteer efforts. With parks, green spaces, and easy access
-        to nearby cities, the area offers peaceful suburban living, while a full
-        calendar of festivals and family friendly gatherings keeps the community
-        active. It is a place where history, hospitality, and growth come
-        together with an inviting sense of possibility.</strong
+        to nearby cities, the area offers peaceful suburban living, with a full
+        calendar of activities and family friendly gatherings keeping the community
+        alive. It is a place where history, hospitality, and growth come
+        together with an inviting sense of kinship.</strong
       >
     </div>
 
