--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <a href="timeline.html">History</a>
           <a href="map.html">Resource Map</a>
           <a href="interview.html">Interviews</a>
-         <a href="documentation.html">The Process</a>
+         <a href="documentation.html">About</a>
          <a href="form.html">Suggest</a>
         </div>
       </div>
