--- a/documentation.html
+++ b/documentation.html
@@ -131,33 +131,63 @@
           <a href="form.html">Suggest</a>
         </div>
       </div>
-    </nav>
-    <div class="map-container">
-      <h1>The Creation of Our Resource Hub</h1>
-      <iframe
-        src="https://websiteporfolio2026.carrd.co/"
-        width="1200"
-        height="3000"
-      >
-      </iframe>
-    </div>
+      </nav>
 
-    <div class="pdf-container">
-      <h2>Documentation</h2>
-      <iframe src="doc.pdf" width="1200" height="800" type="application/pdf">
-        <p>
-          Your browser does not support PDFs.
-          <a href="doc.pdf">Download the PDF</a>.
-        </p>
-      </iframe>
+<style>
+  .pdf-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* space between buttons */
+  }
 
-      <iframe src="doc2.pdf" width="1200" height="800" type="application/pdf">
-        <p>
-          Your browser does not support PDFs.
-          <a href="doc2.pdf">Download the PDF</a>.
-        </p>
-      </iframe>
-    </div>
+  .pdf-button {
+    padding: 10px 20px;
+    background: rgb(53, 46, 46);
+    color: white;
+    border-radius: 6px;
+    text-decoration: none;
+  }
+  h1, h2 {
+    font-size: 28px; /* pick any size you like */
+    margin: 0;
+  }
+</style>
+
+<div class="pdf-container">
+  <h2>Documentation</h2>
+
+  <a class="pdf-button" href="doc.pdf" target="_blank">Open Work Log</a>
+  <a class="pdf-button" href="doc2.pdf" target="_blank">Open Copyright Cheklist</a>
+</div>
+
+<style>
+  .map-container {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  .map-container h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .responsive-iframe {
+    width: 100%;
+    height: 100vh; /* full screen height */
+    border: none;
+  }
+</style>
+
+<div class="map-container">
+  <h1>The Creation of Our Resource Hub</h1>
+
+  <iframe
+    class="responsive-iframe"
+    src="https://websiteporfolio2026.carrd.co/"
+  ></iframe>
+</div>
+
+
 
     <script>
       function toggleDropdown() {
