--- a/documentation.html
+++ b/documentation.html
@@ -157,7 +157,7 @@
   <h2>Documentation</h2>
 
   <a class="pdf-button" href="doc.pdf" target="_blank">Open Work Log</a>
-  <a class="pdf-button" href="doc2.pdf" target="_blank">Open Copyright Cheklist</a>
+  <a class="pdf-button" href="CopyrightCheckFormWebmaster.pdf" target="_blank">Open Copyright Cheklist</a>
 </div>
 
 <style>
